tests/NormalTests/paczka1/fuzzy1/14734702.err
Error in line 2: 88O3 S197 59,5
Error in line 8: VKCePZqpX 4809 36,1
Error in line 1: Dhls3IHAgGE S957 15,9
Error in line 19: Dhls3IHAgGE A809 19,3
Error in line 10: VKCePZqpX A809 0,4
Error in line 34: 2qfPV A809 39,79
Error in line 21: 2qfPV S957 5,7
Error in line 36: VKCePZqpX A809 84,8
Error in line 35: KZ5FZws17 S197 77,6
